- vips_image_write() severs all links between images, when it can ... thanks
  Warren and Nakilon
- vector path for convolution is more accurate and can handle larger masks
- linear and cubic kernels for reduce are higer quality
- added vips_value_set_blob_free()
- "--size Nx" to vipsthumbnail was broken, thanks jrochkind 
- fix build with gcc 7

29/8/17 started 8.5.9
- make --fail stop jpeg read on any libjpeg warning, thanks @mceachen
- don't build enumtypes so often, removing perl as a compile dependency
- fix a crash with heavy use of draw operations from language bindings, 
  thanks @Nakilon 

2/8/17 started 8.5.8
- fix transparency detection in merge, thanks Haida
- define env var VIPS_WARNING to hide warning messages
- shut down dzsave output earlier to help mark-sweep bindings
- fix webp thumbnail upscale, thanks Kleis

9/6/17 started 8.5.7
- better smartcrop
- transform cmyk->rgb automatically on write if there's an embedded profile
  and the saver does not support cmyk
- fix DPI mixup in svgload ... we were writing images about 20% too large,
  thanks Fosk

19/5/17 started 8.5.6
- tiff read with start page > 0 could break edge tiles or strips
- raise b64 limit to allow for huge profiles (thanks jaume)
- fix error return in blob save (thanks jaume)
- tag vipsprofile as py2 (thanks ioquatix)
- don't cache thumbnail (thanks tomasc)

23/4/17 started 8.5.5
- doc polishing
- more improvements for truncated PNG files, thanks juyunsang 
- improve corrupted jpg handling, thanks juyunsang
- fix small test suite issues on os x

23/4/17 started 8.5.4
- don't depend on image width when setting n_lines, thanks kleisauke

7/4/17 started 8.5.3
- more link fixing in docs 
- revise cache sizing again to help out of order errors under heavy load, thanks
  kleisauke

25/3/17 started 8.5.2
- better behaviour for truncated PNG files, thanks Yury
- missing proto for vips_tiffsave_buffer(), thanks greut
- move some docs from the wiki and blog into core libvips docs